完善协作者
